--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^3.6.0",
+    "css-loader": "^5.2.6",
     "eslint": "^7.4.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.3.0",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.5.0",
-    "karma": "^5.1.0",
+    "karma": "^6.3.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^12.1.0",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
+    "webpack": "^5.38.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9",
