--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
+    "lint": "eslint ./src/.",
+    "lint:fix": "eslint --fix ./src/.",
     "test": "karma start"
   },
   "keywords": [],
@@ -15,13 +17,11 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^5.2.6",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.2",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.5.0",
     "karma": "^6.3.3",
@@ -36,12 +36,14 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
     "whatwg-fetch": "^3.2.0"
   },
   "dependencies": {
     "idb": "^6.1.2",
     "regenerator-runtime": "^0.13.5",
+    "webpack-merge": "^5.8.0",
+    "html-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^6.4.1",
     "serviceworker-webpack-plugin": "^1.0.1"
   }
 }
