--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
+    "build:image": "node sharp.js",
+    "start:dev": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint ./src/.",
-    "lint:fix": "eslint --fix ./src/.",
+    "lint:fix": "eslint --fix ./src/.",   
     "test": "karma start"
   },
   "keywords": [],
@@ -22,6 +23,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "file-loader": "^6.2.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.5.0",
     "karma": "^6.3.3",
@@ -32,8 +36,10 @@
     "karma-webpack": "^4.0.2",
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
+    "sharp": "^0.28.3",
     "style-loader": "^1.3.0",
     "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "whatwg-fetch": "^3.2.0"
