--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build:image": "node sharp.js",
     "start:dev": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint ./src/.",
-    "lint:fix": "eslint --fix ./src/.",   
-    "test": "karma start"
+    "lint:fix": "eslint --fix ./src/.",
+    "test": "karma start",    
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -18,10 +19,12 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "babel-loader": "^8.2.2",
+    "codeceptjs": "^3.0.7",
     "css-loader": "^5.2.6",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jasmine": "^4.1.2",
     "file-loader": "^6.2.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webp-webpack-plugin": "^3.3.6",
@@ -35,6 +38,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
     "node-sass": "^4.8.3",
+    "puppeteer": "^10.1.0",
     "sass-loader": "^6.0.7",
     "sharp": "^0.28.3",
     "style-loader": "^1.3.0",
