--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:dev": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint ./src/.",
     "lint:fix": "eslint --fix ./src/.",
-    "test": "karma start",    
+    "test": "karma start",
     "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
@@ -49,11 +49,12 @@
     "whatwg-fetch": "^3.2.0"
   },
   "dependencies": {
-    "idb": "^6.1.2",
-    "regenerator-runtime": "^0.13.5",
-    "webpack-merge": "^5.8.0",
-    "html-webpack-plugin": "^4.5.2",
     "copy-webpack-plugin": "^6.4.1",
-    "serviceworker-webpack-plugin": "^1.0.1"
+    "html-webpack-plugin": "^4.5.2",
+    "idb": "^6.1.2",
+    "lazysizes": "^5.3.2",
+    "regenerator-runtime": "^0.13.5",
+    "serviceworker-webpack-plugin": "^1.0.1",
+    "webpack-merge": "^5.8.0"
   }
 }
